<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>weather_agent</name>
  <version>0.0.2</version>
  <description>The micro-ROS drone use-case weather Agent</description>
  <maintainer email="julianbermudez@eprosima.com">Julian Bermudez</maintainer>
  <license>Apache-2.0</license>
  <author>Julian Bermudez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>microxrcedds_agent</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>