<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>weather_publisher</name>
  <version>0.0.2</version>
  <description>SparkFun Weather Shield publisher for Raspberry Pi</description>
  <maintainer email="julianbermudez@eprosima.com">Julian Bermudez</maintainer>
  <license>Apache-2.0</license>
  <author>Julian Bermudez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclc</depend>
  <depend>sensor_msgs</depend>
  <depend>rmw_microxrcedds</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>